--- a/museu site/style.css
+++ b/museu site/style.css
@@ -6,8 +6,8 @@ body{
 }
 
 #container {
-    width: 1080px;
-    margin: 0 auto;
+   width: 1080px;    
+   margin: 0 auto;
 
 }
 a:link, a:active, a:visited{
@@ -66,17 +66,72 @@ nav ul li a:hover{
 #conteudo {
     width: 710px;
     float: left;
+    margin-bottom: 20px;
 }
 
 aside{
     width: 350px;
     float: right;
+    background: #ebe7dd;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 section#visita{
     background: #cdc8b1;
     padding: 10px 27px 27px 27px;
     margin-top: 10px;
+}
+
+section#galeria {
+    padding: 0 27px 0 27px;
+
+}
+
+section#galeria a {
+    display: block;
+    background: url(imagens/fundo-foto.png) no-repeat;
+    float: left;
+    padding: 17px 15px 17px 15px;
+    margin: 10px 0 0 20px;
+}
+
+select#galeria img {
+    margin-left: 2px;
+    margin-top: 3px;
+}
+
+article#video {
+    float: left;
+    width: 310px;
+    margin-left: 25px;
+}
+
+article#mapa {
+    float: left;
+    width: 310px;
+    margin-left: 37px;
+
+}
+
+article#exposicao {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 25px;
+
+}
+
+article#historia{
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 37px;
+}
+
+h3{
+    color: #227115;
+    font-size: 1em;
+    margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 h4{
@@ -120,5 +175,18 @@ legend{
     display: none;
 }
 
+
+/* rodapé */
+
+footer{
+    clear: both;
+    padding: 20px 0 30px 0 ;
+    text-align: center;
+    background: url(imagens/fundo-rodape.png) no-repeat center top;
+}
+
+footer>p a {
+    padding: 2px 10px;
+}
 
 
